discussion/kv_engine/180822/180822_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53942: Fix checkpoint low/upper marks computation at quota reduction

Incorrect computation might also generate illegal values for the marks.
Already covered by BucketQuotaChangeTest.

Change-Id: I208cbc4c099972b8d8c7105fdb9c17b46f3c95fc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-10-05 09:10:24.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-05 09:41:59.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20881/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:102:9: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    cb::engine_errc prepareToReduceMemoryUsage(size_t desiredQuota);
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20881/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:102:9:
error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20881/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49967/ : FAILURE

Failure of GoogleTest "PersistentAndEphemeral/ConnectionTest.test_mb23637_findByNameWithConnectionDoDisconnect/7":

<pre>
[ RUN      ] PersistentAndEphemeral/ConnectionTest.test_mb23637_findByNameWithConnectionDoDisconnect/7
2022-10-05T02:27:40.835001-07:00 CRITICAL (default) MagmaKVStore Magma open failed. Status:IOError: Unable to open file ep_engine_ep_unit_tests.db/test.104801/magma.1/config.json.tmp: The process cannot access the file because it is being used by another process.
unknown file: error: C++ exception with description "MagmaKVStore Magma open failed. Status:IOError: Unable to open file ep_engine_ep_unit_tests.db/test.104801/magma.1/config.json.tmp: The process cannot access the file because it is being used by another process." thrown in SetUp().
unknown file: error: C++ exception with description "cb::io::rmrf: remove of file \\?\C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db\test.104801\magma.1\wal\wal.1 under ep_engine_ep_unit_tests.db/test.104801 failed: The data is invalid." thrown in TearDown().
[  FAILED  ] PersistentAndEphemeral/ConnectionTest.test_mb23637_findByNameWithConnectionDoDisconnect/7, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=full_eviction" (29 ms)
PersistentAndEphemeral/ConnectionTest.test_mb23637_findByNameWithConnectionDoDisconnect/7
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49967/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41973/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:102:9:
error: no type named "engine_errc" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41973/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22275/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22275/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20113/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10596/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10697/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22869/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23266/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24109/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31287/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
